--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ contact us:
 </p>
 
 <p>
-📧 <a href="mailto:support@ahteshamtech.com">support@ahteshamtech.com</a><br>
+📧 <a href="mailto:syedahteshamullahquadri5619@gmail.com">syedahteshamullahquadri5619@gmail.com</a><br>
 🌐 <strong>Ahtesham Tech</strong>
 </p>
 
